# percy

./: .dockerignore  .gitignore  .travis.yml  .travis.yml.old  404.html  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  css-in-rust.html  index.html  introduction.html  now.json  package-lock.json  package.json  print.html  searchindex.js  searchindex.json  test.sh
.circleci/: config.yml
api/: dark.css  (+7 more)
crates/html-macro/: Cargo.toml  README.md
crates/html-macro-ui/: Cargo.toml  README.md  should_be_self_closing_tag.stderr  test.rs  wrong_closing_tag.stderr
crates/html-macro/src/: lib.rs  parser.rs  tag.rs
crates/html-macro/src/parser/: braced.rs  close_tag.rs  mod.rs  open_tag.rs  statement.rs  text.rs
crates/html-macro/src/parser/open_tag/: event.rs
crates/percy-cli/: Cargo.toml
crates/percy-cli/src/: lib.rs  main.rs  run.rs  subcommand.rs
crates/percy-cli/src/subcommand/: preview.rs
crates/percy-css/: Cargo.toml
crates/percy-css-macro/: Cargo.toml
crates/percy-css-macro/src/: lib.rs
crates/percy-css/src/: lib.rs
crates/percy-dom/: CHANGELOG.md  Cargo.toml  README.md
crates/percy-dom/src/: diff.rs  dom_updater.rs  lib.rs  patch.rs  pdom.rs  render.rs  single_page_app.rs
crates/percy-dom/src/diff/: diff_test_case.rs  longest_increasing_subsequence.rs
crates/percy-dom/src/dom_updater/: events.rs
crates/percy-dom/src/patch/: apply_patches.rs  mod.rs
crates/percy-dom/src/pdom/: events.rs
crates/percy-dom/tests/: boolean_property.rs  checked_attribute.rs  checked_property.rs  closures.rs  create_dom_node.rs  create_element.rs  dangerous_inner_html.rs  diff_patch.rs  dom_updater.rs  event_listener_closures.rs  events.rs  keyed_lists.rs  on_create_element.rs  on_remove_element.rs  pdom.rs  replace.rs  testing_utilities.rs  text.rs  value_attribute.rs
crates/percy-dom/tests/diff_patch_test_case/: mod.rs
crates/percy-preview/: Cargo.toml  README.md
crates/percy-preview-app/: Cargo.toml  Sunbeam.yml  build.rs
crates/percy-preview-app/src/: all_sunbeam_css.rs  app.rs  config.rs  lib.rs  render.rs  routes.rs  view.rs  window_messenger.rs
crates/percy-preview-app/src/app/: config.rs  world.rs
crates/percy-preview-app/src/app/world/: message.rs  resources.rs  state.rs  world_config.rs
crates/percy-preview-app/src/app/world/message/: message_handlers.rs
crates/percy-preview-app/src/app/world/resources/: async_task_spawner.rs
crates/percy-preview-app/src/view/: index_route.rs  routes.rs  visualize_component_route.rs
crates/percy-preview-server/: Cargo.toml
crates/percy-preview-server/src/: config.rs  filesystem_watcher.rs  lib.rs  router.rs  websocket.rs
crates/percy-preview-server/src/router/: websocket.rs
crates/percy-preview/src/: lib.rs  rerender.rs
crates/percy-router/: CHANGELOG.md  Cargo.toml
crates/percy-router-macro/: Cargo.toml
crates/percy-router-macro/src/: create_routes_macro.rs  lib.rs  route_macro.rs
crates/percy-router/src/: lib.rs  provided.rs  route.rs  router.rs
crates/percy-state/: Cargo.toml
crates/percy-state/src/: lib.rs  state_with_message_buffer.rs  world_with_message_buffer.rs
crates/router-rs/: CHANGELOG.md  Cargo.toml
crates/router-rs/src/: lib.rs  provided.rs  route.rs  router.rs
crates/virtual-dom-rs/: CHANGELOG.md  Cargo.toml
crates/virtual-dom-rs/src/: diff.rs  dom_updater.rs  html_macro.rs  html_macro_old.rs  lib.rs  patch.rs  view.rs
crates/virtual-dom-rs/src/diff/: mod.rs
crates/virtual-dom-rs/src/patch/: apply_patches.rs  mod.rs
crates/virtual-dom-rs/src/virtual_node/: browser_events.rs  mod.rs  virtual_node_test_utils.rs
crates/virtual-dom-rs/tests/: closures.rs  create_element.rs  diff_patch.rs  dom_updater.rs  events.rs
crates/virtual-dom-rs/tests/diff_patch_test_case/: mod.rs
crates/virtual-node/: Cargo.toml
crates/virtual-node/src/: create_element.rs  event.rs  iterable_nodes.rs  lib.rs  test_utils.rs  velement.rs  virtual_node_test_utils.rs  vtext.rs
crates/virtual-node/src/create_element/: add_events.rs
crates/virtual-node/src/event/: event_attribute.rs  event_handlers.rs  event_name.rs  events_by_node_idx.rs  input_event.rs  mouse_event.rs  non_delegated_event_wrapper.rs  virtual_events.rs
crates/virtual-node/src/velement/: attribute_value.rs  special_attributes.rs
examples/component-preview/: Cargo.toml  README.md  Sunbeam.yml  build.rs
examples/component-preview/src/: async_task_spawner.rs  lib.rs  preview.rs  routes.rs  views.rs
examples/component-preview/src/views/: controls_header.rs  login.rs  side_nav.rs
examples/component-preview/src/views/controls_header/: controls_header_view.rs
examples/component-preview/src/views/login/: login_form_view.rs
examples/component-preview/src/views/side_nav/: side_nav_view.rs
examples/input-element-default-checkedness/: Cargo.toml  README.md  start.sh
examples/input-element-default-checkedness/src/: lib.rs
examples/isomorphic/app/: Cargo.toml
examples/isomorphic/app/src/: lib.rs  state.rs  store.rs
examples/isomorphic/app/src/state/: mod.rs  msg.rs  serialize.rs
examples/isomorphic/app/src/views/: contributors_view.rs  home_view.rs  mod.rs  nav_bar.rs  nav_bar_view.rs
examples/isomorphic/app/src/views/nav_bar_view/: mod.rs  nav_bar_item_view.rs
examples/isomorphic/client/: Cargo.toml  build-wasm.dev.sh  build-wasm.prod.sh  build-wasm.sh  build-wasm.watch.sh  client-entry-point.js  webpack.config.js
examples/isomorphic/client/src/: client.js  index.js  lib.rs
examples/isomorphic/server/: Cargo.toml
examples/isomorphic/server/src/: actix_server.rs  index.html  lib.rs  main.rs  rocket_server.rs  server.rs
percy-webapis/: Cargo.toml
percy-webapis/src/: lib.rs
tests/jsdom/: Cargo.toml  README.md  build-wasm.sh
tests/jsdom/src/: lib.rs
tests/jsdom/tests/: create-element_test.js  diff-patch_test.js  test-utils.js
virtual-dom-rs/: Cargo.toml
virtual-dom-rs/src/: diff.rs  html_macro.rs  lib.rs  patch.rs  virtual_node.rs  webapis.rs
virtual-dom-rs/src/virtual_node/: mod.rs  virtual_node_test_utils.rs
virtual-dom-rs/tests/: create_element.rs  diff-patch.rs
(+651 files in other folders)
