[package]
name = "percy"
version = "0.0.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A modular toolkit for building isomorphic web apps with Rust + WebAssembly"
keywords = ["virtual", "dom", "wasm", "css", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"

[workspace]
members = [
  "crates/css-rs-macro",
  "crates/router-rs",
  "crates/router-rs-macro",
  "crates/virtual-node",
  "examples/isomorphic/app",
  "examples/isomorphic/client",
  "examples/isomorphic/server",
  "examples/unit-testing-components",
  "examples/css-in-rust",
  "tests/test-css-rs",
  "tests/test-css-rs-fixture",
]
