[package]
name = "percy"
version = "0.0.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A modular toolkit for building interactive frontend browser apps with Rust + WebAssembly. Supports server side rendering."
keywords = ["virtual", "dom", "wasm", "css", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"

[workspace]
members = [
  "crates/css-rs-macro",
  "crates/html-macro",
  "crates/html-macro-test",
  "crates/html-macro-ui",
  "crates/html-validation",
  "crates/router-rs",
  "crates/router-rs-macro",
  "crates/router-rs-macro-test",
  "crates/virtual-node",
  "examples/css-in-rust",
  "examples/isomorphic/app",
  "examples/isomorphic/client",
  "examples/isomorphic/server",
  "examples/unit-testing-components",
  "tests/test-css-rs",
  "tests/test-css-rs-fixture",
]
