[package]
name = "percy"
version = "0.0.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A modular toolkit for building interactive frontend browser apps with Rust + WebAssembly. Supports server side rendering."
keywords = ["virtual", "dom", "wasm", "css", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"

[workspace]
members = [
  "crates/html-macro",
  "crates/html-macro-test",
  "crates/html-validation",
  "crates/percy-cli",
  "crates/percy-css",
  "crates/percy-dom",
  "crates/percy-css-macro",
  "crates/percy-preview",
  "crates/percy-preview-app",
  "crates/percy-preview-server",
  "crates/percy-router",
  "crates/percy-router-macro",
  "crates/percy-router-macro-test",
  "crates/virtual-node",
  "examples/component-preview",
  "examples/isomorphic/app",
  "examples/isomorphic/client",
  "examples/isomorphic/server",
  "examples/unit-testing-components",
  "tests/test-css-rs",
  "tests/test-css-rs-fixture",
]
