[package]
name = "percy-webapis"
version = "0.0.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "Replace this with web-sys when it is releaased."
keywords = ["webapis"]
license = "MIT"
repository = "https://github.com/chinedufn/percy"

[dependencies]
wasm-bindgen = "0.2"
