[package]
name = "virtual-dom-rs"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A standalone Virtual DOM creation, diffing and patching implementation"
keywords = ["virtual", "dom", "wasm", "assembly", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"
documentation = "https://chinedufn.github.io/percy/api/virtual_dom_rs/"

[dependencies]
percy-webapis = { path = "../percy-webapis", version = "0.0.2" }

[dependencies.wasm-bindgen]
version = "0.2.19"
features = ["default", "nightly"]
