[package]
name = "virtual-dom-rs"
version = "0.2.2"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A standalone Virtual DOM creation, diffing and patching implementation"
keywords = ["virtual", "dom", "wasm", "assembly", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"
documentation = "https://chinedufn.github.io/percy/api/virtual_dom_rs/"

[dependencies]

[dependencies.wasm-bindgen]
git = "https://github.com/rustwasm/wasm-bindgen"
features = ["default", "nightly"]

[dependencies.web-sys]
git = "https://github.com/rustwasm/wasm-bindgen"
features = [
    "Document",
    "Element",
    "EventTarget",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "HtmlCollection",
]

