[package]
name = "virtual-dom-rs"
version = "0.2.2"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A standalone Virtual DOM creation, diffing and patching implementation"
keywords = ["virtual", "dom", "wasm", "assembly", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"
documentation = "https://chinedufn.github.io/percy/api/virtual_dom_rs/"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies]

[dependencies.wasm-bindgen]
git = "https://github.com/rustwasm/wasm-bindgen"
features = ["default", "nightly"]

[dependencies.web-sys]
git = "https://github.com/rustwasm/wasm-bindgen"
features = [
    "Comment",
    "Document",
    "Element",
    "EventTarget",
    "HtmlCollection",
    "Node",
    "NodeList",
    "Text",
    "Window",
]

[patch.crates-io]
wasm-bindgen = { git = 'https://github.com/rustwasm/wasm-bindgen' }
web-sys = { git = 'https://github.com/rustwasm/wasm-bindgen' }
