[package]
name = "percy-cli"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "percy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = {version = "3.1", features = ["derive"]}
percy-preview-server = {path = "../percy-preview-server", version = "0.0.1"}
tokio = {version = "1", features = ["rt"]}
