[package]
name = "percy-css-macro"
version = "0.1.1"
edition = "2024"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A macro for writing your CSS next to your views"
keywords = ["css", "style", "stylesheet", "percy", "sheet"]
documentation = "https://chinedufn.github.io/percy/api/percy_css_macro"
repository = "https://github.com/chinedufn/percy"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = '2', features = ['full'] }
quote = '1'
lazy_static = "1.0"
