[package]
name = "percy-css"
version = "0.1.0"
description = "Percy CSS"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
keywords = ["percy", "css", "browser", "web"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"
documentation = "https://chinedufn.github.io/percy/api/percy_css/"
edition = "2018"

[dependencies]
