[package]
name = "percy-dom"
version = "0.7.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A standalone Virtual DOM creation, diffing and patching implementation"
keywords = ["virtual", "dom", "wasm", "assembly", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"
documentation = "https://chinedufn.github.io/percy/api/percy_dom/"
edition = "2018"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2.33"
virtual-node = { path = "../virtual-node", version = "0.3.1" }
html-macro = { path = "../html-macro", version = "0.2.1"}

[dependencies.web-sys]
version = "0.3"
features = [
    "CharacterData",
    "Comment",
    "Document",
    "Element",
    "EventTarget",
    "HtmlCollection",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Node",
    "NodeList",
    "Text",
    "Window",
]

[dev-dependencies]
console_error_panic_hook = "0.1.5"
wasm-bindgen-test = "0.3"

[dev-dependencies.web-sys]
version = "0.3"
features = [
    "DomTokenList",
    "Event",
    "HtmlButtonElement",
    "InputEvent",
    "KeyEvent",
    "MouseEvent",
    "console",
]
