[package]
name = "percy-dom"
version = "0.9.4"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A standalone Virtual DOM creation, diffing and patching implementation"
keywords = ["virtual", "dom", "wasm", "assembly", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"
documentation = "https://chinedufn.github.io/percy/api/percy_dom/"
edition = "2018"

[features]
default = ["macro"]
macro = ["html-macro"]

[dependencies]
js-sys = "0.3"
virtual-node = { path = "../virtual-node", version = "0.5.0" }
wasm-bindgen = "0.2.33"

# Optional dependencies
html-macro = { optional = true, path = "../html-macro", version = "0.2.2"}

[dependencies.web-sys]
version = "0.3"
features = [
    "CharacterData",
    "Comment",
    "Document",
    "Element",
    "EventTarget",
    "History",
    "HtmlCollection",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Location",
    "Node",
    "NodeList",
    "Text",
    "Url",
    "Window",
]

[dev-dependencies]
console_error_panic_hook = "0.1.5"
wasm-bindgen-test = "0.3"

[dev-dependencies.web-sys]
version = "0.3"
features = [
    "DomTokenList",
    "Event",
    "HtmlButtonElement",
    "InputEvent",
    "KeyEvent",
    "MouseEvent",
    "console",
]
