[package]
name = "percy-preview-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
app-world = "0.1"
console_error_panic_hook = "0.1"
js-sys = "0.3"
percy-dom = {path = "../percy-dom"}
percy-router = {path = "../percy-router"}
percy-preview = {path = "../percy-preview"}
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "HtmlElement",
    "Window",
    "console",
]
