[package]
name = "percy-preview-app"
version = "0.0.3"
edition = "2021"
description = "Preview virtual dom components"
keywords = ["virtual", "dom", "wasm", "assembly", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"

[build-dependencies]
sunbeam-build = "0.0.4-alpha"
serde_yaml = "0.8"

[dependencies]
app-world = "0.1"
console_error_panic_hook = "0.1"
js-sys = "0.3"
percy-dom = {path = "../percy-dom", version = "0.9"}
percy-router = {path = "../percy-router", version = "0.5"}
percy-preview = {path = "../percy-preview", version = "0.0.3"}
sunbeam = "0.0.4-alpha"
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "HtmlElement",
    "Window",
    "console",
]
