[package]
name = "percy-preview"
version = "0.0.3"
edition = "2021"
description = "Preview virtual dom components"
keywords = ["virtual", "dom", "wasm", "assembly", "webassembly"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/chinedufn/percy"

[dependencies]
virtual-node = {path = "../virtual-node", version = "0.5"}
