[package]
name = "percy-router-macro"
version = "0.1.5"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A macro for client side web application routing"
keywords = ["route", "router", "wasm", "assembly", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"
documentation = "https://chinedufn.github.io/percy/api/percy_router_macro/"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6.11"
proc-macro2 = "0.4"
