[package]
name = "router-rs"
version = "0.2.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"
description = "A router for client side web applications with server side rendering support"
keywords = ["webassembly", "wasm", "router", "route", "url"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"
documentation = "https://chinedufn.github.io/percy/api/router_rs/"


[dependencies]
virtual-dom-rs = { path = "../virtual-dom-rs", version = "0.6.0"}
router-rs-macro = { path = "../router-rs-macro", version = "0.1.1" }
