[package]
name = "virtual-dom-rs"
version = "0.3.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A standalone Virtual DOM creation, diffing and patching implementation"
keywords = ["virtual", "dom", "wasm", "assembly", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"
documentation = "https://chinedufn.github.io/percy/api/virtual_dom_rs/"
edition = "2018"

[dependencies]
js-sys = "0.3"
wasm-bindgen = {version = "0.2", features = ["default", "nightly"]}
virtual-node = {version = "0.0.1", path = "../virtual-node"}

[dependencies.web-sys]
version = "0.3"
features = [
    "Comment",
    "Document",
    "Element",
    "HtmlElement",
    "EventTarget",
    "HtmlCollection",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "MouseEvent",
    "InputEvent",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dev-dependencies.web-sys]
version = "0.3"
features = [
    "Event",
    "DomTokenList",
    "HtmlInputElement",
]
