[package]
name = "virtual-node"
version = "0.4.0"
description = "A standalone Virtual DOM"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
keywords = ["virtual", "dom", "wasm", "browser", "webassembly"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"
documentation = "https://chinedufn.github.io/percy/api/virtual_node/"
edition = "2018"

[features]
MouseEvent = ["web-sys/MouseEvent"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2.33"
html-validation = {path = "../html-validation", version = "0.1.1"}

[dependencies.web-sys]
version = "0.3"
features = [
    "Comment",
    "Document",
    "Element",
    "HtmlElement",
    "Event",
    "EventTarget",
    "HtmlCollection",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "Event",
    "MouseEvent",
    "InputEvent",
]

