[package]
name = "jsdom-tests"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
private = true

[lib]
crate-type = ["cdylib"]

[dependencies]
virtual-dom-rs = { path = "../../virtual-dom-rs" }

[dependencies.wasm-bindgen]
version = "0.2"
features = ["default", "nightly"]
