[package]
name = "jsdom-tests"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
virtual-dom-rs = { path = "../../virtual-dom-rs" }

[dependencies.wasm-bindgen]
git = "https://github.com/rustwasm/wasm-bindgen"
features = ["default", "nightly"]

[dependencies.web-sys]
git = "https://github.com/rustwasm/wasm-bindgen"
features = [
    "Window"
]
