[package]
name = "isomorphic-app"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"

[dependencies]
css-rs-macro = { path = "../../../crates/css-rs-macro"}
virtual-dom-rs = { path = "../../../crates/virtual-dom-rs" }
router-rs = { path = "../../../crates/router-rs"}
log = "0.4.6"
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1"
wasm-bindgen = "0.2.33"
web-sys = "0.3.10"