[package]
name = "isomorphic-client"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
console_log = "0.1.2"
isomorphic-app = { path = "../app" }
js-sys = "0.3.20"
log = "0.4.6"
virtual-dom-rs = { path = "../../../crates/virtual-dom-rs" }

[dependencies.wasm-bindgen]
version = "0.2.33"
features = ["default", "nightly"]

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "History",
    "Location",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "HtmlCollection",
    "Url",
    "UrlSearchParams"
]
