[package]
name = "isomorphic-server"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
publish = false
edition = "2018"

[features]
default = ["with-rocket"]
with-rocket = ["rocket", "rocket_contrib"]
with-actix = ["actix-web", "actix-files", "actix-rt", "serde"]

[dependencies]
chrono = "0.4.6"
isomorphic-app = { path = "../app" }
env_logger = "0.6.1"
virtual-dom-rs = { path = "../../../crates/virtual-dom-rs" }

# with-rocket
rocket = {optional = true, version = "0.4.0"}
rocket_contrib = {optional = true, version = "0.4.0"}

# with-actix
actix-web = {optional = true, version = "1.0.3"}
actix-files = {optional = true, version = "0.1.3"}
actix-rt = {optional = true, version = "0.2.3"}
serde = {optional = true, version = "1.0.94"}
